[project]
name = 'sdv'
description = 'Generate synthetic data for single table, multi table and sequential data'
authors = [{ name = 'DataCebo, Inc.', email = 'info@sdv.dev' }]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: Free for non-commercial use',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = ['sdv', 'synthetic-data', 'synhtetic-data-generation', 'timeseries', 'single-table', 'multi-table']
dynamic = ['version']
license = { text = 'BSL-1.1' }
requires-python = '>=3.8,<3.13'
readme = 'README.md'
dependencies = [
    'boto3>=1.28',
    'botocore>=1.31',
    'cloudpickle>=2.1.0',
    'graphviz>=0.13.2',
    "numpy>=1.21.0;python_version<'3.10'",
    "numpy>=1.23.3,<2;python_version>='3.10' and python_version<'3.12'",
    "numpy>=1.26.0,<2;python_version>='3.12'",
    "pandas>=1.4.0;python_version<'3.11'",
    "pandas>=1.5.0;python_version>='3.11' and python_version<'3.12'",
    "pandas>=2.1.1;python_version>='3.12'",
    'tqdm>=4.29',
    'copulas>=0.11.0',
    'ctgan>=0.10.0',
    'deepecho>=0.6.0',
    'rdt>=1.12.0',
    'sdmetrics>=0.14.0',
    'platformdirs>=4.0',
    'pyyaml>=6.0.1'
]

[project.urls]
"Source Code"= "https://github.com/sdv-dev/SDV/"
"Issue Tracker" = "https://github.com/sdv-dev/SDV/issues"
"Changes" = "https://github.com/sdv-dev/SDV/blob/main/HISTORY.md"
"Twitter" = "https://twitter.com/sdv_dev"
"Chat" = "https://bit.ly/sdv-slack-invite"

[project.entry-points]
sdv = { main = 'sdv.cli.__main__:main' }

[project.optional-dependencies]
excel = ['pandas[excel]']
test = [
    'sdv[excel]',
    'pytest>=3.4.2',
    'pytest-cov>=2.6.0',
    'pytest-rerunfailures>=10.3,<15',
    'jupyter>=1.0.0,<2',
    'rundoc>=0.4.3,<0.5',
    'pytest-runner >= 2.11.1',
    'tomli>=2.0.0,<3',
]
pomegranate = ['pomegranate>=0.14.3,<0.15']
dev = [
    'sdv[test]',

    # general
    'build>=1.0.0,<2',
    'bump-my-version>=0.18.3,<1',
    'pip>=9.0.1',
    'watchdog>=1.0.1,<5',

    # docs
    'docutils>=0.12,<1',
    'm2r2>=0.2.5,<1',
    'nbsphinx>=0.5.0,<1',
    'sphinx_toolbox>=2.5,<4',
    'Sphinx>=3,<8',
    'pydata-sphinx-theme<1',
    'markupsafe<3',

    # Jinja2>=3 makes the sphinx theme fail
    'Jinja2>=2,<4',

    # style check
    'flake8>=3.7.7,<8',
    'flake8-absolute-import>=1.0,<2',
    'flake8-builtins>=1.5.3,<3',
    'flake8-comprehensions>=3.6.1,<4',
    'flake8-debugger>=4.0.0,<5',
    'flake8-docstrings>=1.5.0,<2',
    'flake8-eradicate>=1.1.0,<2',
    'flake8-fixme>=1.1.1,<1.2',
    'flake8-mock>=0.3,<1',
    'flake8-multiline-containers>=0.0.18,<0.1',
    'flake8-mutable>=1.2.0,<1.3',
    'flake8-expression-complexity>=0.0.9,<0.1',
    'flake8-print>=4.0.0,<4.1',
    'flake8-pytest-style>=2.0.0,<3',
    'flake8-quotes>=3.3.0,<4',
    'flake8-sfs>=0.0.3,<2',
    'flake8-variables-names>=0.0.4,<0.1',
    'dlint>=0.11.0,<1',
    'isort>=5.13.2,<6',
    'pandas-vet>=0.2.3,<2024',
    'pep8-naming>=0.12.1,<1',
    'pydocstyle>=6.1.1,<7',

    # fix style issues
    'autoflake>=1.1,<3',
    'autopep8>=1.4.3,<3',

    # distribute on PyPI
    'twine>=1.10.0,<6',
    'wheel>=0.30.0',

    # Advanced testing
    'coverage>=4.5.12,<8',
    'tox>=2.9.1,<5',
    'invoke'
]

[tool.setuptools]
include-package-data = true
license-files = ['LICENSE']

[tool.setuptools.packages.find]
include = ['sdv', 'sdv.*']
namespaces = false

[tool.setuptools.package-data]
'*' = [
    'CONTRIBUTING.rst',
    'HISTORY.md',
    'README.md',
    '*.md',
    '*.rst',
    'conf.py',
    'Makefile',
    'make.bat',
    '*.jpg',
    '*.png',
    '*.gif',
    'sdv_logger_config.yml'
]

[tool.setuptools.exclude-package-data]
'*' = [
    '* __pycache__',
    '*.py[co]',
    'static_code_analysis.txt',
]

[tool.setuptools.dynamic]
version = {attr = 'sdv.__version__'}

[tool.bumpversion]
current_version = "1.13.1.dev0"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<candidate>\d+))?'
serialize = [
    '{major}.{minor}.{patch}.{release}{candidate}',
	'{major}.{minor}.{patch}'
]
search = '{current_version}'
replace = '{new_version}'
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = 'v{new_version}'
tag_message = 'Bump version: {current_version} → {new_version}'
allow_dirty = false
commit = true
message = 'Bump version: {current_version} → {new_version}'
commit_args = ''

[tool.bumpversion.parts.release]
first_value = 'dev'
optional_value = 'release'
values = [
    'dev',
    'release'
]

[[tool.bumpversion.files]]
filename = "sdv/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[tool.isort]
line_length = 99
lines_between_types = 0
multi_line_output = 4
use_parentheses = true

[tool.pydocstyle]
convention = 'google'
add-ignore = ['D105', 'D107', 'D407', 'D417']

[tool.pytest.ini_options]
addopts = "--ignore=pyproject.toml"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'
